Added a lot of junk, maybe we can use some

--- a/SECTH Client/SECTH Client/SECTH Client.csproj
+++ b/SECTH Client/SECTH Client/SECTH Client.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BingSpeechToTextService.cs" />
     <Compile Include="ClientCode.cs" />
     <Compile Include="CommunicationFile.cs" />
     <Compile Include="Dashboard.cs">
